--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "node --env-file=.env --watch index.js",
-    "dev:debug": "node --inspect --env-file=.env --watch index.js"
+    "start": "node --env-file=.env index.js"
   },
   "keywords": [],
   "license": "ISC",
